tests/diagnostics/snapshots/test_long_label.txt
Error: Can't compare apples with oranges (at <unknown>:1:6)
  | 
1 | apple == orange
  |       ^^ Comparison attempted here. Comparison attempted here.
  |          Comparison attempted here. Comparison attempted
  |          here. Comparison attempted here. Comparison
  |          attempted here. Comparison attempted here.
  |          Comparison attempted here. Comparison attempted
  |          here. Comparison attempted here. Comparison
  |          attempted here. Comparison attempted here.
  |          Comparison attempted here. Comparison attempted
  |          here. Comparison attempted here. Comparison
  |          attempted here. Comparison attempted here.
  |          Comparison attempted here. Comparison attempted
  |          here. Comparison attempted here.